--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding: 30px 15px 40px;
   background-color: rgba(51, 51, 51, .5);
+  overflow-x: hidden;
 
   &::before {
     content: "";
