new project amz-tatoo

--- a/src/pug/portfolio/LiziLizkaLab.pug
+++ b/src/pug/portfolio/LiziLizkaLab.pug
@@ -26,7 +26,7 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/lizilab/04.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("lookshop.html", "quantum.html")
+            +pagination-card("lookshop.html", "amz-tatoo.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
