--- a/src/pug/portfolio/quantum.pug
+++ b/src/pug/portfolio/quantum.pug
@@ -23,7 +23,7 @@ section.card-post
                         img(src="./img/portfolio/quantum/02.jpg", alt="01.jpg")
 
         .card-post__pagination
-            +pagination-card("LiziLizkaLab.html", "dhl.html")
+            +pagination-card("muncak.html", "unit.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
