--- a/src/pug/portfolio/unit.pug
+++ b/src/pug/portfolio/unit.pug
@@ -24,7 +24,7 @@ section.card-post
                         img(src="./img/portfolio/unit/03.jpg", alt="01.jpg")
 
         .card-post__pagination
-            +pagination-card("muncak.html", "comand-web.html")
+            +pagination-card("quantum.html", "comand-web.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
