--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -2,4 +2,4 @@
     .container
         .footer-wrap
             .footer__title © 2020 — Воробьев Александр
-            .footer__subtitle Веб-разработик из Москвы, занимаюсь версткой и созданием сайтов.
+            .footer__subtitle Веб-разработчик из Москвы, занимаюсь версткой и созданием сайтов.
