--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -24,8 +24,8 @@ section.portfolio
                         +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
                     .project.pug.js
                         +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
-                    .project.scss.js
-                        +card("quantum.html", "03.jpg", "03.jpg", "Магазин “Quantum”", "Верстка одностраничного сайта.")
+                    .project.pug.js
+                        +card("amz-tatoo.html", "15.jpg", "15.jpg", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
                     .project.scss.js
                         +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
                     .project.scss.js
@@ -36,6 +36,8 @@ section.portfolio
                         +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
+                    .project.scss.js
+                        +card("quantum.html", "03.jpg", "03.jpg", "Магазин “Quantum”", "Верстка одностраничного сайта.")
                     .project.less.js
                         +card("unit.html", "11.jpg", "11.jpg", "Верстка “Unit”", "Верстка одностраничного сайта.")
                     .project.pug.js
