--- a/src/pug/portfolio/amz-tatoo.pug
+++ b/src/pug/portfolio/amz-tatoo.pug
@@ -2,29 +2,30 @@ section.card-post
     .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
-            h3.card-post__nav-title “DHL”
+            h3.card-post__nav-title “Amz-Tatoo”
             .card-post__nav-meta 
-                span.meta-html HTML
+                span.meta-pug PUG
                 span.meta-scss SCSS
                 span.meta-js JS
-                span.meta-bootstrap Bootstrap
                 span.meta-jquery jQuery
         .card-post__content
             .card-post__content-desc
-                +link-project("https://aleksandrvorobyov.github.io/DHL/", "https://github.com/AleksandrVorobyov/DHL")
+                +link-project("https://aleksandrvorobyov.github.io/Amz-tatoo/", "https://github.com/AleksandrVorobyov/Amz-tatoo")
                 +about-project()
                     p Верстка одностроничного веб-сайта. Это учебный проект и доступен для просмотра по ссылке выше. Сделан с использованием фреймворка Bootstrap, библиотеки animate и Jquery. В верстке используются файлы HTML, Css, js, Sсss. На сайте можно увидеть такие компоненты как табы, модальные окна, адаптивное меню, а также форма отправки данных на почту с помощью ajax. Сайт полностью адаптирован под любое разрешение экрана. Верстка прошла проверку на валидность.
-                +detals("Учебный проект", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/DHL/", "Адаптивная верстка, HTML5, CSS3, Bootstrap grid, JavaScript, jQuery.", "Мобильная навигация, мега-меню, карусель OwlCarousel, ajax корзина, предпросмотре товара, календарь, datepicker, валидация форм")
+                +detals("Учебный проект", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/Amz-tatoo/", "Адаптивная верстка, HTML5, CSS3, Bootstrap grid, JavaScript, jQuery.", "Мобильная навигация, мега-меню, карусель OwlCarousel, ajax корзина, предпросмотре товара, календарь, datepicker, валидация форм")
             .card-post__content-carousel
                 .carousel-project.owl-carousel
                     .owl-carousel-item
-                        img(src="./img/portfolio/dhl/01.jpg", alt="01.jpg")
+                        img(src="./img/portfolio/amz-tatoo/01.jpg", alt="01.jpg")
                     .owl-carousel-item
-                        img(src="./img/portfolio/dhl/02.jpg", alt="01.jpg")
+                        img(src="./img/portfolio/amz-tatoo/02.jpg", alt="02.jpg")
                     .owl-carousel-item
-                        img(src="./img/portfolio/dhl/03.jpg", alt="01.jpg")
+                        img(src="./img/portfolio/amz-tatoo/03.jpg", alt="03.jpg")
+                    .owl-carousel-item
+                        img(src="./img/portfolio/amz-tatoo/04.jpg", alt="04.jpg")
         .card-post__pagination
-            +pagination-card("amz-tatoo.html", "amazing.html")
+            +pagination-card("LiziLizkaLab.html", "dhl.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
@@ -33,7 +34,8 @@ section.card-post
                         +logo("index.html")
                     .full-page__title
                         h2 Верстка интернет магазина 
-                            span “DHL”
+                            span “Amz-Tatoo”
                     .full-page__exit
                 .full-page__img
-                    img(src="./img/fullpage/dhl.png", alt="")
+                    img(src="./img/fullpage/amz-tatoo.png", alt="amz-tatoo")
+
