--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -63,7 +63,7 @@
   display: inline-block;
   text-decoration: none;
   box-shadow: 10px 14px 16px -3px rgba(34, 60, 80, 0.3);
-  border-radius: 3%;
+  border-radius: 14px;
   border: 4px solid #fd6dfd;
   transition: 0.3s linear;
   background-color: #fff;
