--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -11,9 +11,7 @@ html(lang="ru")
         meta(name="keywords" content= keywords)
         meta(name="description" content= description)
         link(rel="shortcut icon", href="./img/favicons/favicon.ico", type="image/x-icon")
-        <!-- build:css2 css/styles.css -->
         link(rel="stylesheet", href="./css/main.css")
-        <!-- endbuild -->
         link(rel="stylesheet" href="./libs/font-awesome/css/font-awesome.min.css")
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -21,7 +19,6 @@ html(lang="ru")
         link(rel="stylesheet", href="./libs/css/owl.theme.default.min.css")
    
     body(class=pageClass)
-        
         .page
             .page__background
                 .page__background-wrap
@@ -30,26 +27,23 @@ html(lang="ru")
                     img(src="./img/body/03.png" data-speed='-2' class='layer')
                     img(src="./img/body/04.png" data-speed='4' class='layer')
                     img(src="./img/body/05.png" data-speed='6' class='layer')
+                    canvas#rain
                 .page__background-wrap-bg
             .page__link#page-link
                 a(href="#navigation") Вверх
             block content
 
-        <!-- build:js1 js/jquery.js -->
-        <script src="./js/jquery-3.3.1.min.js"></script>
-        <!-- endbuild -->
+        script(src="./js/jquery-3.3.1.min.js")
 
-        <!-- build:js2 js/vendor.js -->
-        <script src="./js/header.js"></script>
-        <!-- endbuild -->
+        script(src="./libs/tweenmax/tweenmax.js")
 
-        <!-- build:js3 js/main.js -->
-        <script src="./js/main.js"></script>
-        <!-- endbuild -->
+        script(src="./js/header.js")
 
-        <script src="./js/night-mode.js"></script>
+        script(src="./js/main.js")
 
-        <script src="./js/change-color.js"></script>
+        script(src="./js/night-mode.js")
+
+        script(src="./js/change-color.js")
 
         script(src="./js/carousel-project.js")
 
@@ -62,6 +56,9 @@ html(lang="ru")
         script(src="./js/parallax.js")
 
         script(src="./js/btnup.js")
+
+
+        script(src="./js/rain.js")
 
         <script>jQuery(document).ready(function($) {new WOW().init();});</script>
         <script src="./js/wow.min.js"></script>
