--- a/src/pug/mixins/buttons.pug
+++ b/src/pug/mixins/buttons.pug
@@ -1,5 +1,5 @@
 mixin button-01(link, text)
-    a(href= link class="button-01") #{text}
-        span
+    a(href= link class="button-01") 
+        span #{text}
 mixin button-02(link, text)
     a(href= link class="button-02") #{text}
