--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -1,26 +1,74 @@
-.button-01 {
+.button-01, .button-02 {
+  position: relative;
   display: inline-block;
   padding: 20px 40px;
   background-color: #fd6dfd80;
   border-radius: 40px;
   border: 4px solid #fd6dfd;
   font-size: 34px;
-  font-family: 'Neoneon';
+  font-family: "Neoneon";
   color: #73ebeb;
   font-weight: bold;
   text-decoration: none;
-  transition: 0.3s ease-in;
+  transition: 0.5s;
   cursor: pointer;
   outline: none;
 
   &:hover {
-    background-color: #fd6dfd;
-    border: 4px solid #fd6dfd;
+    transition-delay: 1.5s;
+    box-shadow: 0 0 10px #fc93fc,
+    0 0 20px #fc93fc,
+    0 0 40px #fc93fc,
+    0 0 80px #fc93fc,
+    0 0 160px #fc93fc;
   }
 
-  &:active {
-    background-color: #fd6dfd;
-    border: 4px solid #fd6dfd;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    content: "";
+    transform: translate(0%, -50%);
+    height: 4px;
+    width: 20px;
+    border-radius: 40px;
+    background: #fd6dfd;
+    box-shadow: 8px -8px 0px #fd6dfd, 8px 8px 0px #fd6dfd;
+    z-index: -50;
+    transition: width 0.5s, left 0.5s, height 0.5s, box-shadow 0.5s;
+    transition-delay: 1s, 0.5s, 0s, 0s;
+  }
+
+  &:hover::before {
+    width: 60%;
+    height: 100%;
+    left: -4px;
+    box-shadow: 100% 0 0 #fd6dfd, 100% 0 0 #fd6dfd;
+    transition-delay: 0s, 0.5s, 1s, 1s;
+  }
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    right: -20px;
+    content: "";
+    transform: translate(0%, -50%);
+    height: 4px;
+    width: 20px;
+    border-radius: 40px;
+    background: #fd6dfd;
+    box-shadow: -8px -8px 0px #fd6dfd, -8px 8px 0px #fd6dfd;
+    z-index: -50;
+    transition: width 0.5s, right 0.5s, height 0.5s, box-shadow 0.5s;
+    transition-delay: 1s, 0.5s, 0s, 0s;
+  }
+
+  &:hover::after {
+    width: 60%;
+    height: 100%;
+    right: -4px;
+    box-shadow: 100% 0 0 #fd6dfd, 100% 0 0 #fd6dfd;
+    transition-delay: 0s, 0.5s, 1s, 1s;
   }
 
   @media (min-width: 1170px) {
@@ -29,32 +77,7 @@
 }
 
 .button-02 {
-  display: inline-block;
-  padding: 20px 40px;
-  background-color: rgba(255, 255, 255, 0);
-  border-radius: 40px;
-  border: 4px solid #fff;
-  font-size: 34px;
-  font-family: 'Neoneon';
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  text-decoration: none;
-  transition: 0.3s ease-in;
-  opacity: 1;
-  cursor: pointer;
-  outline: none;
-
-  &:hover {
-    opacity: 0.5;
-  }
-
-  &:active {
-    opacity: 1;
-  }
-
-  @media (min-width: 1170px) {
-    font-size: 22px;
-  }
+  filter: hue-rotate(240deg);
 }
 
 .card {
@@ -199,12 +222,26 @@
       content: "";
       height: 100%;
       width: 150px;
-      background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
-      background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
-      background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
+      background: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(30%, rgba(255, 255, 255, 0)),
+        to(#000)
+      );
+      background: -o-linear-gradient(
+        bottom,
+        rgba(255, 255, 255, 0) 30%,
+        #000 100%
+      );
+      background: linear-gradient(
+        -90deg,
+        rgba(255, 255, 255, 0) 30%,
+        #000 100%
+      );
       z-index: 50;
     }
-  
+
     &::after {
       position: fixed;
       top: 0px;
@@ -212,8 +249,18 @@
       content: "";
       height: 100%;
       width: 150px;
-      background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
-      background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
+      background: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(30%, rgba(255, 255, 255, 0)),
+        to(#000)
+      );
+      background: -o-linear-gradient(
+        bottom,
+        rgba(255, 255, 255, 0) 30%,
+        #000 100%
+      );
       background: linear-gradient(90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
       z-index: 50;
     }
@@ -254,7 +301,7 @@
   position: fixed;
   display: none;
   @media (min-width: 1170px) {
-      display: block;
+    display: block;
   }
 }
 
