--- a/src/pug/portfolio/healthy-food.pug
+++ b/src/pug/portfolio/healthy-food.pug
@@ -2,34 +2,28 @@ section.card-post
     .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
-            h3.card-post__nav-title “Forest Travel”
+            h3.card-post__nav-title “Healthy Food”
             .card-post__nav-meta 
                 span.meta-html HTML
-                span.meta-css CSS
+                span.meta-scss SCSS
                 span.meta-js JS
-                span.meta-bootstrap Bootstrap
                 span.meta-jquery jQuery
         .card-post__content
             .card-post__content-desc
-                +link-project("https://aleksandrvorobyov.github.io/forest-travel/index.html", "https://github.com/AleksandrVorobyov/forest-travel")
+                +link-project("https://aleksandrvorobyov.github.io/healthyfood/", "https://github.com/AleksandrVorobyov/healthyfood")
                 +about-project()
                     p Верстка одностроничного веб-сайта. Это учебный проект и доступен для просмотра по ссылке выше. Сделан с использованием фреймворка Bootstrap, библиотеки animate и Jquery. В верстке используются файлы HTML, Css, js, Sсss , Pug и конечно Gulp. На сайте можно увидеть такие компоненты как карусели, адаптивное меню. Сайт полностью адаптирован под любое разрешение экрана. Верстка прошла проверку на валидность.
-                +detals("Учебный проект", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/forest-travel/index.html", "Адаптивная верстка, HTML5, CSS3, Bootstrap grid, JavaScript, jQuery.", "Мобильная навигация, карусель OwlCarousel, предпросмотр товара,валидация форм")
+                +detals("Учебный проект", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/healthyfood/", "Адаптивная верстка, HTML5, CSS3, Bootstrap grid, JavaScript, jQuery.", "Мобильная навигация, карусель OwlCarousel, предпросмотр товара,валидация форм")
             .card-post__content-carousel
                 .carousel-project.owl-carousel
                     .owl-carousel-item
-                        img(src="./img/portfolio/forest-travel/01.jpg", alt="01.jpg")
+                        img(src="./img/portfolio/healthy-food/03.jpg", alt="03.jpg")
                     .owl-carousel-item
-                        img(src="./img/portfolio/forest-travel/02.jpg", alt="02.jpg")
+                        img(src="./img/portfolio/healthy-food/02.jpg", alt="02.jpg")
                     .owl-carousel-item
-                        img(src="./img/portfolio/forest-travel/03.jpg", alt="03.jpg")
-                    .owl-carousel-item
-                        img(src="./img/portfolio/forest-travel/04.jpg", alt="04.jpg")
-                    .owl-carousel-item
-                        img(src="./img/portfolio/forest-travel/05.jpg", alt="05.jpg")
-
+                        img(src="./img/portfolio/healthy-food/01.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("comand-web.html", "healthy-food.html")
+            +pagination-card("forest-travel.html", "travel-blog.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
@@ -38,7 +32,7 @@ section.card-post
                         +logo("index.html")
                     .full-page__title
                         h2 Верстка интернет магазина 
-                            span “Forest Travel”
+                            span “Healthy Food”
                     .full-page__exit
                 .full-page__img
-                    img(src="./img/fullpage/forest.png", alt="")
+                    img(src="./img/fullpage/healthy-food.jpg", alt="healthy-food")
