--- a/src/pug/portfolio/travel-blog.pug
+++ b/src/pug/portfolio/travel-blog.pug
@@ -25,7 +25,7 @@ section.card-post
                         img(src="./img/portfolio/travel-blog/03.jpg", alt="01.jpg")
 
         .card-post__pagination
-            +pagination-card("forest-travel.html", "lookshop.html")
+            +pagination-card("healthy-food.html", "lookshop.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
