--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -18,6 +18,8 @@ section.portfolio
                 .seperator
                 // project cards
                 .portfolio__card-inner.wow.animated.shake
+                    .project.scss.js
+                        +card("healthy-food.html", "16.jpg", "16.jpg", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
                     .project.scss.js
