--- a/src/scss/blocks/animation.scss
+++ b/src/scss/blocks/animation.scss
@@ -129,3 +129,13 @@
     transform: scale(1.15);
   }
 }
+
+@keyframes cards-anim {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
