--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -14,7 +14,7 @@
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0) 30%,
-      rgba(253, 109, 253, 1) 100%
+      rgb(0, 0, 0) 100%
     );
   }
 
@@ -70,7 +70,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    height: 150px;
+    height: 100px;
     width: 100%;
     background: linear-gradient(
       0deg,
