--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -41,6 +41,8 @@ html(lang="ru")
 
         script(src="./js/main.js")
 
+        script(src="./js/form.js")
+
         script(src="./js/night-mode.js")
 
         script(src="./js/change-color.js")
