--- a/src/scss/blocks/animation.scss
+++ b/src/scss/blocks/animation.scss
@@ -139,3 +139,32 @@
     opacity: 1;
   }
 }
+
+@keyframes nameLogo {
+  0% {
+    left: -10%;
+    width: 10%;
+  }
+
+  25% {
+    left: 50%;
+    width: 10%;
+    transformX: translate(-50%);
+  }
+
+  30% {
+    left: 0;
+    width: 100%;
+    transform: translate(0);
+  }
+
+  75% {
+    left: 0%;
+    width: 100%;
+  }
+
+  100% {
+    left: 110%;
+    width: 10%;
+  }
+}
