--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -70,18 +70,20 @@
   color: #fff;
   line-height: 1.2;
   z-index: 3;
+  overflow: hidden;
 
   &::after {
     position: absolute;
-    content: "";
+    content: '';
     clear: both;
-    background-color: #fd6dfd;
-    width: 100%;
+    background: #fd6dfd;
+    width: 10%;
     height: 15px;
     bottom: 0px;
     left: 0;
     z-index: -1;
     transition: 0.5s ease-in-out;
+    animation: nameLogo 6s ease-in-out 0s infinite;
   }
 
   @media (min-width: 1170px) {
