--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -91,8 +91,8 @@
   text-decoration: none;
   box-shadow: 10px 14px 16px -3px rgba(34, 60, 80, 0.3);
   border-radius: 14px;
-  border: 4px solid #fd6dfd;
-  transition: 0.3s linear;
+  border: 6px solid #fd6dfd;
+  transition: 0.3s linear, border .5s ease-in-out;
   background-color: #fff;
 
   &:hover {
