--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -78,12 +78,13 @@
     clear: both;
     background: #fd6dfd;
     width: 10%;
-    height: 15px;
+    height: 10px;
     bottom: 0px;
     left: 0;
     z-index: -1;
     transition: 0.5s ease-in-out;
     animation: nameLogo 6s ease-in-out 0s infinite;
+    border-radius: 10px 0;
   }
 
   @media (min-width: 1170px) {
