--- a/src/scss/blocks/navigation.scss
+++ b/src/scss/blocks/navigation.scss
@@ -1,7 +1,6 @@
 .navigation {
   position: relative;
   padding-top: 75px;
-  background-color: rgba(244, 248, 249, 0.5);
   z-index: 4;
 
   @media (min-width: 1170px) {
@@ -14,7 +13,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    height: 150px;
+    height: 100px;
     width: 100%;
     background: linear-gradient(0deg, rgba(255, 255, 255, 0) 30%, #000 100%);
     z-index: -1;
@@ -68,12 +67,12 @@
   transition: 0.8s ease-in-out;
   margin-bottom: 50px;
   text-shadow: 0 0 5px #fd6dfd, 0 0 10px #fd6dfd, 0 0 20px #fd6dfd,
-    0 0 40px #fd6dfd, 0 0 80px #fd6dfd, 0 0 90px #fd6dfd;
+    0 0 40px #fd6dfd, 0 0 80px #fd6dfd;
   z-index: 10;
 
   &:hover {
     text-shadow: 0 0 10px #fd6dfd, 0 0 20px #fd6dfd, 0 0 40px #fd6dfd,
-      0 0 80px #fd6dfd, 0 0 120px #fd6dfd, 0 0 150px #fd6dfd;
+      0 0 80px #fd6dfd, 0 0 120px #fd6dfd;
   }
 
   &::after {
@@ -183,6 +182,7 @@
 }
 
 .navigation__social {
+  margin-bottom: 50px;
   position: relative;
   display: flex;
   align-items: center;
@@ -192,6 +192,7 @@
 
   @media (min-width: 1170px) {
     border-bottom: 5px solid #fd6dfd;
+    margin-bottom: 0;
   }
 
   a {
@@ -214,8 +215,7 @@
     font-size: 4em;
     color: #fff;
     text-shadow: 0 0 5px #fd6dfd, 0 0 10px #fd6dfd, 0 0 20px #fd6dfd,
-      0 0 40px #fd6dfd, 0 0 80px #fd6dfd, 0 0 90px #fd6dfd, 0 0 100px #fd6dfd,
-      0 0 150px #fd6dfd;
+      0 0 40px #fd6dfd, 0 0 80px #fd6dfd;
     transition: 0.8s ease-in-out;
 
     @media (min-width: 1170px) {
