--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -47,6 +47,8 @@ html(lang="ru")
 
         script(src="./js/change-color.js")
 
+        script(src="./js/random-color.js")
+
         script(src="./js/carousel-project.js")
 
         script(src="./js/owl.carousel.min.js")
