--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -1,4 +1,5 @@
-.button-01, .button-02 {
+.button-01,
+.button-02 {
   position: relative;
   display: inline-block;
   padding: 20px 40px;
@@ -16,11 +17,8 @@
 
   &:hover {
     transition-delay: 1.5s;
-    box-shadow: 0 0 10px #fc93fc,
-    0 0 20px #fc93fc,
-    0 0 40px #fc93fc,
-    0 0 80px #fc93fc,
-    0 0 160px #fc93fc;
+    box-shadow: 0 0 10px #fc93fc, 0 0 20px #fc93fc, 0 0 40px #fc93fc,
+      0 0 80px #fc93fc, 0 0 160px #fc93fc;
   }
 
   span {
@@ -92,9 +90,9 @@
   box-shadow: 10px 14px 16px -3px rgba(34, 60, 80, 0.3);
   border-radius: 20px;
   border: 6px solid #fd6dfd;
-  transition: 0.3s linear, border .5s ease-in-out;
-  background-color: #fff;
-  overflow: hidden;
+  transition: 0.3s linear, border 0.5s ease-in-out, transform 1.2s linear;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 30;
 
   &:hover {
     transform: scale(1.1);
@@ -116,15 +114,19 @@
   }
 }
 
-.card__img {
-  margin-bottom: 20px;
-  border-bottom: 4px solid #fd6dfd;
-  transition: border .5s ease-in-out;
+.card__img-wrap {
+  position: relative;
+  height: 260px;
+  width: 100%;
+  perspective: 800px;
+  z-index: 30;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 5% 5% 0 0;
 
   img {
     width: 100%;
-    height: 360px;
-    border-radius: 3% 3% 0 0;
+    height: 100%;
+    border-radius: 5% 5% 0 0;
     object-fit: cover;
 
     @media (min-width: 1020px) {
@@ -135,10 +137,63 @@
       height: 260px;
     }
   }
+
+  figure {
+    position: absolute;
+    margin: 0;
+    display: block;
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+  }
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: transform 1.2s linear;
+  transform-style: preserve-3d;
+  transform-origin: left center;
+}
+
+.card:hover .card__btn {
+  z-index: 40;
+}
+
+.card:hover .card__img {
+  transform: translateY(00%) rotateY(-180deg);
+}
+
+.card__img-back {
+  transform: rotateY(180deg);
 }
 
 .card__text {
+  padding-top: 20px;
   text-align: center;
+  border-top: 6px solid #fd6dfd;
+}
+
+.card__btn {
+  position: absolute;
+  top: 80px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 34px;
+  line-height: 34px;
+  letter-spacing: 2px;
+  font-family: "Neoneon";
+  color: aqua;
+  padding: 20px 40px;
+  background: #fd6dfd;
+  cursor: pointer;
+  z-index: 25;
+  -webkit-box-reflect: below 10px
+    linear-gradient(transparent, rgba(0, 0, 17, 0.288));
+  transition-delay: 0.6s;
+  box-shadow: 0 0 10px #6decfd, 0 0 20px #6decfd, 0 0 40px #6decfd,
+    0 0 60px #6decfd;
 }
 
 .card__title {
