--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -116,18 +116,27 @@
 
 .card__img-wrap {
   position: relative;
-  height: 260px;
+  height: 360px;
   width: 100%;
   perspective: 800px;
   z-index: 30;
   background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 5% 5% 0 0;
+  border-radius: 14px 14px 0 0;
+
+  @media (min-width: 1020px) {
+    height: 280px;
+  }
+
+  @media (min-width: 1170px) {
+    height: 260px;
+  }
 
   img {
     width: 100%;
     height: 100%;
-    border-radius: 5% 5% 0 0;
+    border-radius: 12px 12px 0 0;
     object-fit: cover;
+    height: 360px;
 
     @media (min-width: 1020px) {
       height: 280px;
@@ -177,7 +186,7 @@
 
 .card__btn {
   position: absolute;
-  top: 80px;
+  top: 140px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 34px;
@@ -194,6 +203,10 @@
   transition-delay: 0.6s;
   box-shadow: 0 0 10px #6decfd, 0 0 20px #6decfd, 0 0 40px #6decfd,
     0 0 60px #6decfd;
+
+  @media (min-width: 1020px) {
+    top: 80px;
+  }
 }
 
 .card__title {
