new project charger

--- a/src/pug/portfolio/charger.pug
+++ b/src/pug/portfolio/charger.pug
@@ -2,26 +2,28 @@ section.card-post
     .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
-            h3.card-post__nav-title “Amazing”
+            h3.card-post__nav-title “Charger”
             .card-post__nav-meta 
-                span.meta-html HTML
+                span.meta-pug PUG
                 span.meta-scss SCSS
                 span.meta-js JS
                 span.meta-jquery jQuery
         .card-post__content
             .card-post__content-desc
-                +link-project("https://aleksandrvorobyov.github.io/Amazing/", "https://github.com/AleksandrVorobyov/lizilizka")
+                +link-project("https://aleksandrvorobyov.github.io/charger/", "https://github.com/AleksandrVorobyov/charger")
                 +about-project()
                     p Верстка одностроничного веб-сайта. Это реальный проект и доступен для просмотра по ссылке выше. Сделан с использованием фреймворка Bootstrap, библиотеки animate и Jquery. В верстке используются файлы HTML, Css, js, Sсss , Pug и конечно Gulp. На сайте можно увидеть такие компоненты как модальные окна, адаптивное меню, а также форма отправки данных на почту с помощью ajax. Сайт полностью адаптирован под любое разрешение экрана. Верстка прошла проверку на валидность.
-                +detals("Частное лицо", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/Amazing/", "Адаптивная верстка, HTML5, CSS3, JavaScript, jQuery.", "Мобильная навигация, ajax форма, валидация форм")
+                +detals("Частное лицо", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/charger/", "Адаптивная верстка, HTML5, CSS3, JavaScript, jQuery.", "Мобильная навигация, ajax форма, валидация форм")
             .card-post__content-carousel
                 .carousel-project.owl-carousel
                     .owl-carousel-item
-                        img(src="./img/portfolio/amazing/01.jpg", alt="01.jpg")
+                        img(src="./img/portfolio/charger/03.jpg", alt="03.jpg")
                     .owl-carousel-item
-                        img(src="./img/portfolio/amazing/02.jpg", alt="01.jpg")
+                        img(src="./img/portfolio/charger/02.jpg", alt="02.jpg")
+                    .owl-carousel-item
+                        img(src="./img/portfolio/charger/01.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("muncak.html", "surfing.html")
+            +pagination-card("dhl.html", "realhome.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
@@ -30,7 +32,7 @@ section.card-post
                         +logo("index.html")
                     .full-page__title
                         h2 Верстка интернет магазина 
-                            span “Amazing”
+                            span “Charger”
                     .full-page__exit
                 .full-page__img
-                    img(src="./img/fullpage/amazing.png", alt="")
+                    img(src="./img/fullpage/charger.png", alt="")
