--- a/src/pug/portfolio/muncak.pug
+++ b/src/pug/portfolio/muncak.pug
@@ -24,7 +24,7 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/muncak/03.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("realhome.html", "quantum.html")
+            +pagination-card("realhome.html", "amazing.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
