--- a/src/pug/portfolio/surfing.pug
+++ b/src/pug/portfolio/surfing.pug
@@ -27,7 +27,7 @@ section.card-post
                         img(src="./img/portfolio/surfing/04.jpg", alt="04.jpg")
 
         .card-post__pagination
-            +pagination-card("amazing.html", "realhome.html")
+            +pagination-card("amazing.html", "quantum.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
