--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -30,14 +30,16 @@ section.portfolio
                         +card("amz-tatoo.html", "15.jpg", "15.jpg", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
                     .project.scss.js
                         +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
+                    .project.pug.js
+                        +card("charger.html", "17.jpg", "17.jpg", "Верстка “Charger", "Верстка одностраничного сайта.")
                     .project.scss.js
                         +card("amazing.html", "13.jpg", "13.jpg", "Верстка “Amazing”", "Верстка одностраничного сайта.")
-                    .project.less.js
-                        +card("surfing.html", "09.jpg", "09.jpg", "Верстка “Surfing Website”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
+                    .project.less.js
+                        +card("surfing.html", "09.jpg", "09.jpg", "Верстка “Surfing Website”", "Верстка одностраничного сайта.")
                     .project.scss.js
                         +card("quantum.html", "03.jpg", "03.jpg", "Магазин “Quantum”", "Верстка одностраничного сайта.")
                     .project.less.js
