--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -7,9 +7,8 @@ html(lang="ru")
         //- meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title #{title}
-
-        meta(name="keywords" content= keywords)
-        meta(name="description" content= description)
+        meta(name="keywords")
+        meta(name="description")
         link(rel="shortcut icon", href="./img/favicons/favicon.ico", type="image/x-icon")
         link(rel="stylesheet", href="./css/main.css")
         link(rel="stylesheet" href="./libs/font-awesome/css/font-awesome.min.css")
@@ -22,11 +21,11 @@ html(lang="ru")
         .page
             .page__background
                 .page__background-wrap
-                    img(src="./img/body/01.png" data-speed='-5' class='layer')
-                    img(src="./img/body/02.png" data-speed='5' class='layer')
-                    img(src="./img/body/03.png" data-speed='-2' class='layer')
-                    img(src="./img/body/04.png" data-speed='4' class='layer')
-                    img(src="./img/body/05.png" data-speed='6' class='layer')
+                    img(src="./img/body/01.png" alt='01.png' data-speed='-5' class='layer')
+                    img(src="./img/body/02.png" alt='02.png' data-speed='5' class='layer')
+                    img(src="./img/body/03.png" alt='03.png' data-speed='-2' class='layer')
+                    img(src="./img/body/04.png" alt='04.png' data-speed='4' class='layer')
+                    img(src="./img/body/05.png" alt='05.png' data-speed='6' class='layer')
                     canvas#rain
                 .page__background-wrap-bg
             .page__link#page-link
