--- a/src/pug/sections/contact.pug
+++ b/src/pug/sections/contact.pug
@@ -6,7 +6,7 @@ section.contact
         .contact-wrap
             .contact__info.wow.animated.fadeInUp
                 p.contact__info-desc Если вы ищите специалиста по верстке сайтов, front-end разработчика в команду или для работы над проектом —  напишите мне.
-                .contact__info-table
+                table.contact__info-table
                     ol.rounded
                         li 
                             .rounded-row
