--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -2,8 +2,8 @@ section.header
 	.container
 		.header-wrap
 			.header__text.wow.animated.fadeInUp
-				.header__text-title.neon <span>Ал</span>ексан<span>д</span>р
-				.header__text-title.neon Вор<span>обь</span>ев
+				h2.header__text-title.neon <span>Ал</span>ексан<span>д</span>р
+				h2.header__text-title.neon Вор<span>обь</span>ев
 
 				.header__text-subtitle
 					p Верстальщик сайтов, Frontend-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ. 
