--- a/src/pug/sections/navigation.pug
+++ b/src/pug/sections/navigation.pug
@@ -2,10 +2,10 @@ section.navigation#navigation
     .big-container
         div(id="nightSun" class="night-sun" data-title="Включить белую тему")
             i(class="fa fa-3x fa-moon-o" aria-hidden="true")
-        nav.navigation-wrap
-            .navigation__logo.wow.animated.slideInDown
+        .navigation-wrap
+            h1.navigation__logo.wow.animated.slideInDown
                 +logo("index.html")
-            .navigation__link-nav.wow.animated.slideInDown
+            nav.navigation__link-nav.wow.animated.slideInDown
                 ul
                     +nav("index.html", "Главная", "Главная")
                     +nav("portfolio.html", "Работы", "Работы")
