--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -1,8 +1,8 @@
 section.portfolio
     .container
         .portfolio-wrap
-            .portfolio__title.neon.wow.animated.lightSpeedIn По<span>рт</span>фо<span>ли</span>о
-            .portfolio__nav
+            h3.portfolio__title.neon.wow.animated.lightSpeedIn По<span>рт</span>фо<span>ли</span>о
+            nav.portfolio__nav
                 input#project.checkbox-all(type='radio' name='checkbox' checked='' data-menu = 'project')
                 label(for='project') Все работы
                 input#html.checkbox-html(type='radio' name='checkbox' data-menu = 'html')
