--- a/src/pug/sections/portfolio.pug
+++ b/src/pug/sections/portfolio.pug
@@ -1,8 +1,8 @@
 section(class='portfolio' id='portfolio')
     .container
         .portfolio-wrap
-            .portfolio__title.neon.wow.animated.lightSpeedIn По<span>рт</span>фо<span>ли</span>о
-            .portfolio__card.wow.animated.shake
+            h3.portfolio__title.neon.wow.animated.lightSpeedIn По<span>рт</span>фо<span>ли</span>о
+            nav.portfolio__card.wow.animated.shake
                     +card("healthy-food.html", "16.jpg", "16.jpg", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
                     +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
                     +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
