--- a/src/pug/sections/timeline.pug
+++ b/src/pug/sections/timeline.pug
@@ -1,7 +1,7 @@
 section.timeline(id="scrolltarget")
     .container
         .timeline-wrap
-            .timeline__title.neon.wow.animated.lightSpeedIn К<span>ак</span> я р<span>або</span>таю
+            h3.timeline__title.neon.wow.animated.lightSpeedIn К<span>ак</span> я р<span>або</span>таю
             .timeline__column
                 .timeline__column-item.wow.animated.slideInLeft
                     .timeline__column-item-img
