--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -7,13 +7,12 @@ html(lang="ru")
         //- meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title #{title}
-        meta(name="keywords")
-        meta(name="description")
+        meta(name="keywords" content="Веб разработчик")
         link(rel="shortcut icon", href="./img/favicons/favicon.ico", type="image/x-icon")
         link(rel="stylesheet", href="./css/main.css")
         link(rel="stylesheet" href="./libs/font-awesome/css/font-awesome.min.css")
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        link(href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet")
         link(rel="stylesheet", href="./libs/css/owl.carousel.min.css")
         link(rel="stylesheet", href="./libs/css/owl.theme.default.min.css")
    
