--- a/src/scss/blocks/portfolio.scss
+++ b/src/scss/blocks/portfolio.scss
@@ -39,8 +39,10 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(#dfdbdb48, #fa9d9d70), url('../img/portfolio/bg.jpg') top center/ cover no-repeat;
+  background-attachment: fixed;
+  background-blend-mode: hue;
   z-index: -1;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 .portfolio-wrap {
