new project lemon fix

--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -18,6 +18,8 @@ section.portfolio
                 .seperator
                 // project cards
                 .portfolio__card-inner.wow.animated.shake
+                    .project.pug.js
+                        +card("lemon.html", "18.jpg", "18.jpg", "Верстка “Lemon”", "Верстка одностраничного сайта.")
                     .project.scss.js
                         +card("healthy-food.html", "16.jpg", "16.jpg", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
                     .project.pug.js
