--- a/src/pug/sections/portfolio.pug
+++ b/src/pug/sections/portfolio.pug
@@ -3,15 +3,15 @@ section(class='portfolio' id='portfolio')
         .portfolio-wrap
             h3.portfolio__title.neon.wow.animated.lightSpeedIn По<span>рт</span>фо<span>ли</span>о
             nav.portfolio__card.wow.animated.shake
-                    +card("lemon.html", "18.jpg", "18.jpg", "Верстка “Lemon”", "Верстка одностраничного сайта.")
-                    +card("healthy-food.html", "16.jpg", "16.jpg", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
+                    +card("lemon.html", "18.webp", "18.webp", "Верстка “Lemon”", "Верстка одностраничного сайта.")
+                    +card("healthy-food.html", "16.webp", "16.webp", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
                     +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
-                    +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
+                    +card("lookshop.html", "14.webp", "14.webp", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
                     +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
-                    +card("amz-tatoo.html", "15.jpg", "15.jpg", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
+                    +card("amz-tatoo.html", "15.webp", "15.webp", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
                     +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
-                    +card("charger.html", "17.jpg", "17.jpg", "Верстка “Charger", "Верстка одностраничного сайта.")
-                    +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
+                    +card("charger.html", "17.webp", "17.webp", "Верстка “Charger", "Верстка одностраничного сайта.")
+                    +card("muncak.html", "12.webp", "12.webp", "Верстка “Muncak”", "Верстка одностраничного сайта.")
         .portfolio__nav-bottom
             .portfolio__color-circle.wow.animated.fadeInUp
                 div(class="color-item color-yellow" data-color='linear-gradient(0deg, rgba(248,255,128,1) 0%, rgba(252,223,89,1) 100%)')
