--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -354,7 +354,7 @@
       rgba(203, 251, 255, 0.5) 40%,
       #fd6dfc80 80%
     ),
-    url("../img/body/00.jpg") top left / cover no-repeat;
+    url("../img/body/00.webp") top left / cover no-repeat;
   background-blend-mode: hue;
   overflow: hidden;
   z-index: 20;
